Ensure submenus visible on mobile

--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -186,10 +186,10 @@ input, textarea {
         max-width: 150px;
     }
     .menu-item {
-        max-width: 40px;
+        max-width: none;
     }
     .menu-item:nth-last-child(-n+2) {
-        display: none;
+        display: flex;
     }
 }
 
